fix(DirectoryEntry): fix spacing and border around the card

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_directories.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_directories.scss
@@ -197,6 +197,12 @@
         margin: 0;
     }
 
+    &--border {
+        border: 1px solid $stockport-grey-accent;
+        border-top: none;
+        border-radius: 0 0 3px 3px;
+    }
+
     &__description {
         margin-bottom: 2em;
         @media #{$tablet} {
